force-app/main/default/objects/SSP_Asset__c/SSP_Asset__c.object-meta.xml
<CustomObject>
    <description>Custom object to store details of Income, Expense, Resources, Employment Information.</description>
    <label>SSP Asset</label>
    <nameField>
        
        <displayFormat>A-{00000000}</displayFormat>
        
        <label>SSP_Asset Name</label>
        
        <type>AutoNumber</type>
        
    </nameField>
    <pluralLabel>SSP Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>