force-app/main/default/objects/SSP_Asset__c/fields/AccountBalance__c.field-meta.xml
<CustomField>
    <fullName>AccountBalance__c</fullName>
    <description>Used to store Account Balance of a resource</description>
    <label>Account Balance ($)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>