force-app/main/default/objects/SSP_Asset__c/fields/ActivityStartDate__c.field-meta.xml
<CustomField>
    <fullName>ActivityStartDate__c</fullName>
    <description>Used to store Activity Start Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Activity Start Date</label>
    <type>Date</type>
</CustomField>