force-app/main/default/objects/SSP_Asset__c/fields/ActivityType__c.field-meta.xml
<CustomField>
    <fullName>ActivityType__c</fullName>
    <description>Used to store Employment Activity Type</description>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>EmploymentActivityType</valueSetName>
        
        </valueSet>
</CustomField>