force-app/main/default/objects/SSP_Asset__c/fields/AddressLine1__c.field-meta.xml
<CustomField>
    <fullName>AddressLine1__c</fullName>
    <description>Used to store Address Line 1</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>