force-app/main/default/objects/SSP_Asset__c/fields/BooksAmount__c.field-meta.xml
<CustomField>
    <fullName>BooksAmount__c</fullName>
    <description>Used to store the amount used to buy Books</description>
    <label>Books Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>