force-app/main/default/objects/SSP_Asset__c/fields/BusinessTitle__c.field-meta.xml
<CustomField>
    <fullName>BusinessTitle__c</fullName>
    <description>This field is used to store Work Description for an asset</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Work Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>