force-app/main/default/objects/SSP_Asset__c/fields/BusinessTypeCode__c.field-meta.xml
<CustomField>
    <fullName>BusinessTypeCode__c</fullName>
    <description>Used to store different types of Business</description>
    <label>Business Type Code</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>BusinessType</valueSetName>
        
        </valueSet>
</CustomField>