force-app/main/default/objects/SSP_Asset__c/fields/CashSurrenderValue__c.field-meta.xml
<CustomField>
    <fullName>CashSurrenderValue__c</fullName>
    <description>This field is used to store cash surrender value for life insurance asset</description>
    <label>Life insurance cash surrender value ($)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>