force-app/main/default/objects/SSP_Asset__c/fields/ChildName__c.field-meta.xml
<CustomField>
    <fullName>ChildName__c</fullName>
    <description>Used to store child Name</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Child Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>