force-app/main/default/objects/SSP_Asset__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>This field is used to store city for an Asset Address</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>