force-app/main/default/objects/SSP_Asset__c/fields/ContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>ContractEndDate__c</fullName>
    <description>This field is used to store contract End Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract end date</label>
    <type>Date</type>
</CustomField>