force-app/main/default/objects/SSP_Asset__c/fields/ContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>ContractStartDate__c</fullName>
    <description>This field is used to store contract Start Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract start date</label>
    <type>Date</type>
</CustomField>