force-app/main/default/objects/SSP_Asset__c/fields/CountyCode__c.field-meta.xml
<CustomField>
    <fullName>CountyCode__c</fullName>
    <description>This field is used to store county for an Asset Address</description>
    <label>County</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SSPCounty</valueSetName>
        
        </valueSet>
</CustomField>