force-app/main/default/objects/SSP_Asset__c/fields/DCAssetId__c.field-meta.xml
<CustomField>
    <fullName>DCAssetId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field is used to indicate unique asset record for an External system</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>DCAssetId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>