force-app/main/default/objects/SSP_Asset__c/fields/DCChildSupportExpenseDetailId__c.field-meta.xml
<CustomField>
    <fullName>DCChildSupportExpenseDetailId__c</fullName>
    <description>This field is used to indicate unique child support expense record for an External system</description>
    <externalId>true</externalId>
    <label>DCChildSupportExpenseDetailId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>