force-app/main/default/objects/SSP_Asset__c/fields/DCExpenseDetailId__c.field-meta.xml
<CustomField>
    <fullName>DCExpenseDetailId__c</fullName>
    <description>This field is used to indicate unique expense detail record for an External system</description>
    <externalId>true</externalId>
    <label>DCExpenseDetailId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>