force-app/main/default/objects/SSP_Asset__c/fields/DCId__c.field-meta.xml
<CustomField>
    <fullName>DCId__c</fullName>
    <description>This field is used to indicate unique asset record for an External system</description>
    <externalId>true</externalId>
    <label>DCId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>