force-app/main/default/objects/SSP_Asset__c/fields/DCResourceDetailId__c.field-meta.xml
<CustomField>
    <fullName>DCResourceDetailId__c</fullName>
    <description>This field is used to uniquely identify the resource detail for an external system</description>
    <label>DCResourceDetailId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>