force-app/main/default/objects/SSP_Asset__c/fields/DCResourceValueDetailId__c.field-meta.xml
<CustomField>
    <fullName>DCResourceValueDetailId__c</fullName>
    <description>This field is used to identify a unique record for an external system</description>
    <externalId>true</externalId>
    <label>DCResourceValueDetailId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>