force-app/main/default/objects/SSP_Asset__c/fields/DCSelfEmploymentIncomeDetailId__c.field-meta.xml
<CustomField>
    <fullName>DCSelfEmploymentIncomeDetailId__c</fullName>
    <description>This field is used to indicate unique self employment income record for an External system</description>
    <externalId>true</externalId>
    <label>DCSelfEmploymentIncomeDetailId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>