force-app/main/default/objects/SSP_Asset__c/fields/DependentCareProvider__c.field-meta.xml
<CustomField>
    <fullName>DependentCareProvider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to indicate dependent care provider for an Asset</description>
    <label>Dependent Care Provider</label>
    <referenceTo>SSP_Member__c</referenceTo>
    <relationshipName>SSPMemberDCP</relationshipName>
    <type>Lookup</type>
</CustomField>