force-app/main/default/objects/SSP_Asset__c/fields/DependentIndividual__c.field-meta.xml
<CustomField>
    <fullName>DependentIndividual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to indicate dependent individual for an Asset</description>
    <label>Dependent Care for</label>
    <referenceTo>SSP_Member__c</referenceTo>
    <relationshipName>SSPMemberDI</relationshipName>
    <type>Lookup</type>
</CustomField>