force-app/main/default/objects/SSP_Asset__c/fields/DivorceDate__c.field-meta.xml
<CustomField>
    <fullName>DivorceDate__c</fullName>
    <description>Date of divorce or separation</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Divorce/separation agreement date</label>
    <type>Date</type>
</CustomField>