force-app/main/default/objects/SSP_Asset__c/fields/EIN__c.field-meta.xml
<CustomField>
    <fullName>EIN__c</fullName>
    <description>This field is used to store EIN for a member on a particular asset</description>
    <label>Employer Identification Number (EIN)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>