force-app/main/default/objects/SSP_Asset__c/fields/EmployerAddress__c.field-meta.xml
<CustomField>
    <fullName>EmployerAddress__c</fullName>
    <description>This field is used to store Employer Address</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Employer Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>