force-app/main/default/objects/SSP_Asset__c/fields/EmployerAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>EmployerAddressLine2__c</fullName>
    <description>This field is used to store employer address line 2</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Employer Address Line2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>