force-app/main/default/objects/SSP_Asset__c/fields/EmployerName__c.field-meta.xml
<CustomField>
    <fullName>EmployerName__c</fullName>
    <description>This field is used to store Employer Name of Citizen</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Employer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>