force-app/main/default/objects/SSP_Asset__c/fields/EmploymentEndReason__c.field-meta.xml
<CustomField>
    <fullName>EmploymentEndReason__c</fullName>
    <description>This field is used to store the employment end Reason for an Asset</description>
    <label>Employment End Reason</label>
    <type>Picklist</type>
    <valueSet>
        
            <controllingField>IncomeTypeCode__c</controllingField>
        
            <restricted>true</restricted>
        
            <valueSetName>EmploymentEndReason</valueSetName>
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        </valueSet>
</CustomField>