force-app/main/default/objects/SSP_Asset__c/fields/ExpenseAmount__c.field-meta.xml
<CustomField>
    <fullName>ExpenseAmount__c</fullName>
    <description>This field is used to store Expense Amount for an Asset</description>
    <label>Expense Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>