force-app/main/default/objects/SSP_Asset__c/fields/ExpenseFrequencyCode__c.field-meta.xml
<CustomField>
    <fullName>ExpenseFrequencyCode__c</fullName>
    <description>This field is used to store Expense Frequency code for an Asset</description>
    <label>Expense Frequency</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>PayFrequency</valueSetName>
        
        </valueSet>
</CustomField>