force-app/main/default/objects/SSP_Asset__c/fields/ExpensesAmount__c.field-meta.xml
<CustomField>
    <fullName>ExpensesAmount__c</fullName>
    <description>This field is used to store Expenses Amount code for an Asset</description>
    <label>Expenses Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>