force-app/main/default/objects/SSP_Asset__c/fields/ExpenseSubType__c.field-meta.xml
<CustomField>
    <fullName>ExpenseSubType__c</fullName>
    <description>This field is used to store Expense Sub type for an Asset</description>
    <label>Expense Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <controllingField>ExpenseTypeCode__c</controllingField>
        
            <restricted>true</restricted>
        
            <valueSetName>ExpenseSubType</valueSetName>
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        </valueSet>
</CustomField>