force-app/main/default/objects/SSP_Asset__c/fields/ExpenseTypeCode__c.field-meta.xml
<CustomField>
    <fullName>ExpenseTypeCode__c</fullName>
    <description>This field is used to store Expense Type for an Asset</description>
    <label>Expense Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>ExpenseType</valueSetName>
        
        </valueSet>
</CustomField>