force-app/main/default/objects/SSP_Asset__c/fields/FaceValueAmount__c.field-meta.xml
<CustomField>
    <fullName>FaceValueAmount__c</fullName>
    <description>This field is used to store face value amount for life insurance asset</description>
    <label>Life insurance face value ($)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>