force-app/main/default/objects/SSP_Asset__c/fields/FeesAmount__c.field-meta.xml
<CustomField>
    <fullName>FeesAmount__c</fullName>
    <description>This field is used to store Fees amount for an Asset</description>
    <label>Fees Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>