force-app/main/default/objects/SSP_Asset__c/fields/FuneralFundCode__c.field-meta.xml
<CustomField>
    <fullName>FuneralFundCode__c</fullName>
    <description>This field is used to store the option on how the Funeral contract funded</description>
    <label>How is Funeral Contract Funded ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>FuneralFundType</valueSetName>
        
        </valueSet>
</CustomField>