force-app/main/default/objects/SSP_Asset__c/fields/FuneralLocation__c.field-meta.xml
<CustomField>
    <fullName>FuneralLocation__c</fullName>
    <description>This field is used to store Funeral home and location for an Asset</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Funeral Home and Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>