force-app/main/default/objects/SSP_Asset__c/fields/HasAccessToVehicleToggle__c.field-meta.xml
<CustomField>
    <fullName>HasAccessToVehicleToggle__c</fullName>
    <description>This field is used to indicate whether the member has access to Vehicle Asset</description>
    <label>Has Access to Vehicle ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>