force-app/main/default/objects/SSP_Asset__c/fields/HasItemizedStmtOfGoodsSignByClientToggle__c.field-meta.xml
<CustomField>
    <fullName>HasItemizedStmtOfGoodsSignByClientToggle__c</fullName>
    <description>This field is used to indicate whether the member has itemized statement of goods signed</description>
    <label>Has Itemized Stmt of Goods Signed ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>