force-app/main/default/objects/SSP_Asset__c/fields/HasPolicyAssignedToFuneralHomeToggle__c.field-meta.xml
<CustomField>
    <fullName>HasPolicyAssignedToFuneralHomeToggle__c</fullName>
    <description>This field is used to indicate whether the asset is assigned for funeral home</description>
    <label>Has Policy assigned for Funeral Home ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>