force-app/main/default/objects/SSP_Asset__c/fields/IncomePayDetailHoursPerWeek__c.field-meta.xml
<CustomField>
    <fullName>IncomePayDetailHoursPerWeek__c</fullName>
    <description>This field is used to indicate income pay detail hours per week</description>
    <label>Income Pay Detail Hrs Per Week</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>