force-app/main/default/objects/SSP_Asset__c/fields/IncomePayFrequency__c.field-meta.xml
<CustomField>
    <fullName>IncomePayFrequency__c</fullName>
    <description>This field is used to store the income pay frequency for an asset</description>
    <label>Income Pay Frequency</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>PayFrequency</valueSetName>
        
        </valueSet>
</CustomField>