force-app/main/default/objects/SSP_Asset__c/fields/IncomeSubtypeCode__c.field-meta.xml
<CustomField>
    <fullName>IncomeSubtypeCode__c</fullName>
    <description>This field is used to store the income sub type for an asset</description>
    <label>Income Subtype</label>
    <type>Picklist</type>
    <valueSet>
        
            <controllingField>IncomeTypeCode__c</controllingField>
        
            <restricted>true</restricted>
        
            <valueSetName>IncomeSubType</valueSetName>
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        </valueSet>
</CustomField>