force-app/main/default/objects/SSP_Asset__c/fields/IncomeTypeCode__c.field-meta.xml
<CustomField>
    <fullName>IncomeTypeCode__c</fullName>
    <description>This field is used to store the income type for an asset</description>
    <label>Income Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>IncomeType</valueSetName>
        
        </valueSet>
</CustomField>