force-app/main/default/objects/SSP_Asset__c/fields/InsuranceCompanyAddress__c.field-meta.xml
<CustomField>
    <fullName>InsuranceCompanyAddress__c</fullName>
    <description>This field is used to store insurance company address for an asset</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Insurance Company Address</label>
    <type>TextArea</type>
</CustomField>