force-app/main/default/objects/SSP_Asset__c/fields/InsuranceCompanyName__c.field-meta.xml
<CustomField>
    <fullName>InsuranceCompanyName__c</fullName>
    <description>This field is used to store the insurance company name for an asset</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Insurance Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>