force-app/main/default/objects/SSP_Asset__c/fields/InsuranceCompanyPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>InsuranceCompanyPhoneNumber__c</fullName>
    <description>This field is used to store the insurance company phone number for an asset</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Insurance Company Phone Number</label>
    <type>Phone</type>
</CustomField>