force-app/main/default/objects/SSP_Asset__c/fields/InsurancePolicyAsset__c.field-meta.xml
<CustomField>
    <fullName>InsurancePolicyAsset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to indicate the Life insurance policy asset for a Pre arranged Funeral Contract</description>
    <label>Insurance Policy Asset</label>
    <referenceTo>SSP_Asset__c</referenceTo>
    <relationshipName>SSP_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>