force-app/main/default/objects/SSP_Asset__c/fields/IsExistingData__c.field-meta.xml
<CustomField>
    <fullName>IsExistingData__c</fullName>
    <description>This field is used to indicate whether it is an existing asset or not</description>
    <formula>IF(ISBLANK(DCId__c), false, true)</formula>
    <label>Is Existing Data</label>
    <type>Checkbox</type>
</CustomField>