force-app/main/default/objects/SSP_Asset__c/fields/IsHomeHomesteadPropertyToggle__c.field-meta.xml
<CustomField>
    <fullName>IsHomeHomesteadPropertyToggle__c</fullName>
    <description>This field is used to indicate whether an asset is homestead property</description>
    <label>Is Homestead Property ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>