force-app/main/default/objects/SSP_Asset__c/fields/IsIncomeEssentialToSelfSupportToggle__c.field-meta.xml
<CustomField>
    <fullName>IsIncomeEssentialToSelfSupportToggle__c</fullName>
    <description>This field is used to indicate whether an asset is essential to self support</description>
    <label>Is Income Essential to Self Support ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>