force-app/main/default/objects/SSP_Asset__c/fields/IsIncomeProducingPropertyToggle__c.field-meta.xml
<CustomField>
    <fullName>IsIncomeProducingPropertyToggle__c</fullName>
    <description>This field is used to indicate whether an asset is income producing property</description>
    <label>Is Income Producing Property ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>