force-app/main/default/objects/SSP_Asset__c/fields/IsIndividualAbleToRideToggle__c.field-meta.xml
<CustomField>
    <fullName>IsIndividualAbleToRideToggle__c</fullName>
    <description>This field is used to indicate whether an individual is able to ride vehicle asset</description>
    <label>Is Individual able to Ride this vehicle?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>