force-app/main/default/objects/SSP_Asset__c/fields/IsMoneyPaidToOutsideToggle__c.field-meta.xml
<CustomField>
    <fullName>IsMoneyPaidToOutsideToggle__c</fullName>
    <description>toggle question for if this money is paid directly outside</description>
    <label>Is this money paid directly to Outside</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>