force-app/main/default/objects/SSP_Asset__c/fields/IsNonHouseHoldMemberPayingExpenseToggle__c.field-meta.xml
<CustomField>
    <fullName>IsNonHouseHoldMemberPayingExpenseToggle__c</fullName>
    <description>This field is used to indicate whether a non household member is paying expense</description>
    <label>Is Non Household Member paying Expense ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>