force-app/main/default/objects/SSP_Asset__c/fields/IsPaidToVendorToggle__c.field-meta.xml
<CustomField>
    <fullName>IsPaidToVendorToggle__c</fullName>
    <description>This field is used to indicate whether it is paid to vendor</description>
    <label>Is paid to vendor?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>