force-app/main/default/objects/SSP_Asset__c/fields/IsPolicyDesignatedToPayBurialToggle__c.field-meta.xml
<CustomField>
    <fullName>IsPolicyDesignatedToPayBurialToggle__c</fullName>
    <description>This field is used to indicate whether an asset is designated to pay for burial</description>
    <label>Is Policy designate to Pay Burial</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>