force-app/main/default/objects/SSP_Asset__c/fields/IsPolicyUsedForPrearrangedFuneralToggle__c.field-meta.xml
<CustomField>
    <fullName>IsPolicyUsedForPrearrangedFuneralToggle__c</fullName>
    <description>This field is used to indicate whether an asset is used for funeral</description>
    <label>Is Policy for Funeral ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>