force-app/main/default/objects/SSP_Asset__c/fields/IsSchoolDegreeRequiredToggle__c.field-meta.xml
<CustomField>
    <fullName>IsSchoolDegreeRequiredToggle__c</fullName>
    <description>This field is used to indicate whether a school degree is required for an asset</description>
    <label>Is School Degree Required ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>