force-app/main/default/objects/SSP_Asset__c/fields/IsThereAnotherOwnerToggle__c.field-meta.xml
<CustomField>
    <fullName>IsThereAnotherOwnerToggle__c</fullName>
    <description>This field is used to indicate if there is an another owner for an asset</description>
    <label>Is there another owner?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>