force-app/main/default/objects/SSP_Asset__c/fields/IsUnempBenefitsRequiredToggle__c.field-meta.xml
<CustomField>
    <fullName>IsUnempBenefitsRequiredToggle__c</fullName>
    <description>This field is used to indicate whether unemployment benefits are required for an asset</description>
    <label>Is Unemployment Benefits Required ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>