force-app/main/default/objects/SSP_Asset__c/fields/LoanBalance__c.field-meta.xml
<CustomField>
    <fullName>LoanBalance__c</fullName>
    <description>Used to store Loan Balance of a resource</description>
    <label>Current Loan Amount Owed ($)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>