force-app/main/default/objects/SSP_Asset__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>This field is used to store real estate address and description for an asset</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Real Estate Address and Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>