force-app/main/default/objects/SSP_Asset__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <description>This field is used to store make for vehicle asset</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>