force-app/main/default/objects/SSP_Asset__c/fields/MiscellaneousAmount__c.field-meta.xml
<CustomField>
    <fullName>MiscellaneousAmount__c</fullName>
    <description>This field is used to store miscellaneous amount</description>
    <label>Miscellaneous Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>