force-app/main/default/objects/SSP_Asset__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>This field is used to store model for vehicle asset</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>