force-app/main/default/objects/SSP_Asset__c/fields/ModelYear__c.field-meta.xml
<CustomField>
    <fullName>ModelYear__c</fullName>
    <description>This field is used to store model year for vehicle asset</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Model Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>