force-app/main/default/objects/SSP_Asset__c/fields/NoAccessReason__c.field-meta.xml
<CustomField>
    <fullName>NoAccessReason__c</fullName>
    <description>This field is used to store reason for why the member does not have access to vehicle asset</description>
    <label>Why doesn&apos;t have Access to Vehicle ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>VehicleNoAccessReason</valueSetName>
        
        </valueSet>
</CustomField>