force-app/main/default/objects/SSP_Asset__c/fields/NotEnoughInformation__c.field-meta.xml
<CustomField>
    <fullName>NotEnoughInformation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate that there is not enough information to provide for an asset</description>
    <label>Not Enough Information</label>
    <type>Checkbox</type>
</CustomField>